Fix sources tabs overflow

--- a/src/editor/components/ViewsPane.scss
+++ b/src/editor/components/ViewsPane.scss
@@ -1,6 +1,7 @@
 .views-pane {
   display: flex;
   flex-direction: column;
+  flex: 0 0 50%;
 
   // Tab
   ul {
